# workspacer

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EDITOR-FEATURES.md  LICENSE  Makefile  PRODUCT_TIGHTENING_TASKS.md  README.md  SECURITY.md  TODO.md  Taskfile.yml  browser_service.go  config.go  config_service.go  dev  electron-builder.yml  go.mod  go.sum  main.go  mise.toml  next-features.md  package-lock.json  package.json  run-workspacer  terminal_service.go  vitest.config.ts  workspace_service.go
.claude/skills/make-workspacer-plugin/: SKILL.md
.github/workflows/: ci.yml  release.yml
.task/checksum/: build-frontend--DEV--  build-frontend--DEV-true-  generate-bindings--BUILD_FLAGS--buildvcs-false--gcflags-all---l--  generate-bindings--BUILD_FLAGS--tags-production--trimpath--buildvcs-false--ldflags---w--s--  linux-common-install-frontend-deps  windows-common-install-frontend-deps
.workspacer/: council.mjs
apps/desktop/: .prettierignore  DESIGN_LANGUAGE.md  README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.main.json
apps/desktop/scripts/: gen-config-defaults.mjs  gen-icons.sh  test-workflow-watcher.js
apps/tui/: Cargo.toml  README.md
apps/tui/src/: bus.rs  claudemon.rs  config.rs  daemons.rs  keys.rs  library.rs  main.rs  names.rs  notes.rs  pins.rs  profiles.rs  terminal.rs  theme.rs  types.rs  ui.rs
apps/tui/src/app/: input.rs  mod.rs  tasks.rs
apps/tui/src/render/: markdown.rs  mod.rs  wrap.rs
claudemon/: Cargo.toml  README.md  vitest-out.txt
claudemon/src/: cli.rs  lib.rs  main.rs  protocol.rs
claudemon/src/classifier/: mod.rs
claudemon/src/daemon/: api.rs  git.rs  hook.rs  init.rs  mod.rs  spawn.rs
claudemon/src/session/: emulator.rs  mod.rs  state.rs  store.rs  transcript.rs
claudemon/src/store/: items.rs  mod.rs  schema.rs
claudemon/src/tui/: app.rs  editor.rs  mod.rs  preview.rs  sse.rs  view.rs
claudemon/src/tui/view/: dashboard.rs  mod.rs
claudemon/src/wrapper/: mod.rs  pty.rs
claudemon/tests/: ui_preview.rs
contracts/: README.md  deepmerge-cases.json  model-pricing-cases.json
docs/: features.md  multi-agent-providers.md  production-inventory.md  project.md  remote-sharing-security.md  remote-tmux-mirror-plan.md  tui-parity.md  ui-ux-hardening.md  v2-spec.md  windows-code-signing.md
docs/todo/: phase1-shell.md  phase2-terminals.md
frontend/: package-lock.json  package.json
frontend/bindings/workspacer/: browserservice.ts  configservice.ts  index.ts  models.ts  terminalservice.ts  workspaceservice.ts
frontend/public/: style.css
frontend/src/: App.css  App.tsx
frontend/src/components/: NavBar.tsx  (+3 more)
hub/: README.md  go.mod
hub/docs/: rules-engine-plugin.md  workflow-events.md
internal/hooks/: watcher.go
internal/template/: store.go
internal/tui/: api.go
internal/usage/: scanner.go
internal/workflow/: store.go
landing/: README.md  analytics.js  build-plugin.html  build-plugin.md  build.html  docs.html  index.html  llms.txt
scripts/: check-doc-drift.sh  test-library-claude.js
services/claudemon/: Cargo.toml  README.md  build.rs
services/claudemon/src/: cli.rs  lib.rs  main.rs  protocol.rs
services/claudemon/src/classifier/: mod.rs  types.rs
services/claudemon/src/daemon/: api.rs  git.rs  heartbeat.rs  hook.rs  init.rs  mcp_ask.rs  mod.rs  spawn.rs  wrapper_ws.rs
services/claudemon/src/providers/: claude_stream.rs  codex.rs  codex_rollout.rs  mod.rs  opencode.rs  pi.rs
services/claudemon/src/session/: account_usage.rs  conversation.rs  handoff.rs  mod.rs  permission_mode.rs  pricing.rs  state.rs  store.rs  transcript.rs  usage.rs
services/claudemon/src/store/: items.rs  mod.rs  schema.rs
services/claudemon/src/tui/: app.rs  editor.rs  mod.rs  preview.rs  sse.rs  syntax.rs
services/claudemon/src/tui/view/: chat.rs  dashboard.rs  mod.rs
services/claudemon/src/wrapper/: mod.rs  pty.rs
services/claudemon/tests/: ui_preview.rs
services/hub/: README.md  go.mod  go.sum
src/main/: index.ts  ipc.ts  preload.ts
src/renderer/: index.html  package-lock.json  package.json  vite.config.ts  vite.config.web.ts  vitest.config.ts
tests/main/: claudeHooksConfig.test.ts  claudeSessionStore.test.ts  headlessTerminalManager.test.ts  hookServer.test.ts
wks-tui/: Cargo.toml
wks-tui/src/: app.rs  claudemon.rs  daemons.rs  library.rs  main.rs  profiles.rs  types.rs  ui.rs  usage.rs
(+810 files in other folders)
